# gsheets-cell-counter

./: .gitignore  README.md  pyproject.toml
data/: customer_model.txt
src/gsheets_cell_counter/: __init__.py  authentication.py  cell.py  cli.py  usage.py
tests/: test_gsheets_cell_counter.py
