[tool.poetry]
name = "gsheets-cell-counter"
version = "0.1.0"
description = ""
authors = ["Pranas Ziaukas <pranas@balena.io>"]

[tool.poetry.dependencies]
python = "^3.8"
click = "^8.0.0"
google-api-python-client = "^2.4.0"
google-auth-oauthlib = "^0.4.4"

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"
flake8 = "^3.9.2"
pydocstyle = "^6.1.1"

[tool.poetry.scripts]
gsheets-cc = 'gsheets_cell_counter:cli.get_cell_counts'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
